<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AllianceTechMT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="first">First Name:</string>
    <string name="last">Last Name:</string>
    <string name="phone">Phone</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="na">N/A</string>

</resources>
